<resources>
    <string name="app_name">Song Book</string>

    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="github">https://github.com/klaydze/SongBook/tree/master</string>
    <string name="action_about_description">Song Book is an app with KumYoung song list contents and designed by Jessie Semana.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_all_songs">All Songs</string>
    <string name="nav_item_favorites">Favorites</string>
    <string name="nav_item_local">Local</string>
    <string name="nav_item_international">International</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_all_songs</item>
        <item>@string/nav_item_favorites</item>
        <item>@string/nav_item_local</item>
        <item>@string/nav_item_international</item>
    </string-array>

    <string name="title_all_songs">All Songs</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_local">Local</string>
    <string name="title_international">International</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_header_image">Drawer Header Image</string>
    <string name="dev_name">Jessie Semana</string>
    <string name="dev_email">jessiesemana@gmail.com</string>
    <string name="default_song_number">00000</string>
    <string name="default_song_title">Song title here...</string>
    <string name="default_song_artist">Artist</string>


</resources>
