<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_padding_56"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_56"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSongNumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/horizontal_margin_16"
            android:layout_marginLeft="@dimen/horizontal_margin_16"
            android:layout_marginRight="@dimen/horizontal_margin_16"
            android:layout_marginStart="@dimen/horizontal_margin_16"
            android:gravity="center"
            android:text="@string/default_song_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSongTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/horizontal_margin_8"
                android:layout_marginRight="@dimen/horizontal_margin_8"
                android:singleLine="true"
                android:text="@string/default_song_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/tvSongArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_song_artist"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="14sp" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/toggleButton1"
            style="@style/toggleButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/horizontal_margin_16"
            android:layout_marginLeft="@dimen/horizontal_margin_16"
            android:layout_marginRight="@dimen/horizontal_margin_16"
            android:layout_marginStart="@dimen/horizontal_margin_16"
            android:background="@drawable/favorite_toggle_bg"
            android:gravity="center"
            android:textSize="0sp" />
    </LinearLayout>
</LinearLayout>